// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountStatus renders connected account 1`] = `
<div>
  <div>
    <div>
      <span
        class="chip chip-primary is-compact"
      >
        Complete
      </span>
      <span
        class="account-status__info"
      >
        Payments:
        <span
          class="account-status__info__green"
        >
          <svg
            class="gridicon gridicons-checkmark-circle"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658C17.823 3.39 15.075 2 12 2 6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10c0-1.528-.353-2.97-.966-4.266L11 17.768z"
              />
            </g>
          </svg>
          Enabled
        </span>
      </span>
      <span
        class="account-status__info"
      >
        Deposits:
        <span
          class="account-status__info__green"
        >
          <svg
            class="gridicon gridicons-checkmark-circle"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658C17.823 3.39 15.075 2 12 2 6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10c0-1.528-.353-2.97-.966-4.266L11 17.768z"
              />
            </g>
          </svg>
          Daily
        </span>
      </span>
    </div>
    
  </div>
</div>
`;

exports[`AccountStatus renders rejected.fraud account 1`] = `
<div>
  <div>
    <div>
      <span
        class="chip chip-light is-compact"
      >
        Rejected
      </span>
      <span
        class="account-status__info"
      >
        Payments:
        <span
          class="account-status__info__red"
        >
          <svg
            class="gridicon gridicons-notice needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
              />
            </g>
          </svg>
          Disabled
        </span>
      </span>
      <span
        class="account-status__info"
      >
        Deposits:
        <span
          class="account-status__info__red"
        >
          <svg
            class="gridicon gridicons-notice needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
              />
            </g>
          </svg>
          Disabled
        </span>
      </span>
    </div>
    <div
      class="account-status__desc"
    >
      This account has been rejected because of suspected fraudulent activity.
    </div>
  </div>
</div>
`;

exports[`AccountStatus renders rejected.other account 1`] = `
<div>
  <div>
    <div>
      <span
        class="chip chip-light is-compact"
      >
        Rejected
      </span>
      <span
        class="account-status__info"
      >
        Payments:
        <span
          class="account-status__info__red"
        >
          <svg
            class="gridicon gridicons-notice needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
              />
            </g>
          </svg>
          Disabled
        </span>
      </span>
      <span
        class="account-status__info"
      >
        Deposits:
        <span
          class="account-status__info__red"
        >
          <svg
            class="gridicon gridicons-notice needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
              />
            </g>
          </svg>
          Disabled
        </span>
      </span>
    </div>
    <div
      class="account-status__desc"
    >
      This account has been rejected.
    </div>
  </div>
</div>
`;

exports[`AccountStatus renders rejected.terms_of_service account 1`] = `
<div>
  <div>
    <div>
      <span
        class="chip chip-light is-compact"
      >
        Rejected
      </span>
      <span
        class="account-status__info"
      >
        Payments:
        <span
          class="account-status__info__red"
        >
          <svg
            class="gridicon gridicons-notice needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
              />
            </g>
          </svg>
          Disabled
        </span>
      </span>
      <span
        class="account-status__info"
      >
        Deposits:
        <span
          class="account-status__info__red"
        >
          <svg
            class="gridicon gridicons-notice needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
              />
            </g>
          </svg>
          Disabled
        </span>
      </span>
    </div>
    <div
      class="account-status__desc"
    >
      This account has been rejected due to a Terms of Service violation.
    </div>
  </div>
</div>
`;

exports[`AccountStatus renders restricted account 1`] = `
<div>
  <div>
    <div>
      <span
        class="chip chip-alert is-compact"
      >
        Restricted
      </span>
      <span
        class="account-status__info"
      >
        Payments:
        <span
          class="account-status__info__red"
        >
          <svg
            class="gridicon gridicons-notice needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
              />
            </g>
          </svg>
          Disabled
        </span>
      </span>
      <span
        class="account-status__info"
      >
        Deposits:
        <span
          class="account-status__info__red"
        >
          <svg
            class="gridicon gridicons-notice needs-offset"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 15h-2v-2h2v2zm0-4h-2l-.5-6h3l-.5 6z"
              />
            </g>
          </svg>
          Disabled
        </span>
      </span>
    </div>
    <div
      class="account-status__desc"
    >
      Payments and deposits are disabled for this account until missing business information is updated. 
      <a
        href="/wp-admin/admin.php?page=wc-settings&tab=checkout&section=woocommerce_payments&wcpay-login=1"
      >
        Update now
      </a>
    </div>
  </div>
</div>
`;

exports[`AccountStatus renders restricted soon account 1`] = `
<div>
  <div>
    <div>
      <span
        class="chip chip-warning is-compact"
      >
        Restricted soon
      </span>
      <span
        class="account-status__info"
      >
        Payments:
        <span
          class="account-status__info__green"
        >
          <svg
            class="gridicon gridicons-checkmark-circle"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658C17.823 3.39 15.075 2 12 2 6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10c0-1.528-.353-2.97-.966-4.266L11 17.768z"
              />
            </g>
          </svg>
          Enabled
        </span>
      </span>
      <span
        class="account-status__info"
      >
        Deposits:
        <span
          class="account-status__info__green"
        >
          <svg
            class="gridicon gridicons-checkmark-circle"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M11 17.768l-4.884-4.884 1.768-1.768L11 14.232l8.658-8.658C17.823 3.39 15.075 2 12 2 6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10c0-1.528-.353-2.97-.966-4.266L11 17.768z"
              />
            </g>
          </svg>
          Daily
        </span>
      </span>
    </div>
    <div
      class="account-status__desc"
    >
      To avoid disrupting deposits, 
      <a
        href="/wp-admin/admin.php?page=wc-settings&tab=checkout&section=woocommerce_payments&wcpay-login=1"
      >
        update this account
      </a>
       by 8am Mar 10, 2020 with more information about the business.
    </div>
  </div>
</div>
`;
